Scrolling "leaks" into new location.
Originally "reported" by @charbelnicolas.
Affected versions
- Nightly flatpak
- 3.36 stable
Steps to reproduce
- Navigate to a location that scrolls.
- Using a touchpad, scroll down with a fast swipe.
- Right after that, navigate to another location that scrolls.
Current behavior
The new location is scrolled way down (sometimes to the bottom).
Expected behavior
Switching location stops all scrolling movement. In particular, if going to parent folder, the previous directory should be selected and in view.
Additional information
This is, in part, a gtk bug: gtk#187
However, even if not setting the adjustment, we don't want scrolling which continues even when location changes.