files-view: Cancel kinetic deceleration on loading

If we change location while the view is still scrolling due to
kinetic deceleration, we get a sudden jump to the same scrolling
position as the previous location, as well as residual scrolling
movement in the new location.

This is both undesirable and unexpected from a user POV.

Workaround that by canceling deceleration when switching locations.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/1452


(cherry picked from commit a4d7148210970c5eb874df736b900f577684a13b)